fixed downloading db